[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/GodotPythonBridge.py" type="Script" id=1]
[ext_resource path="res://scenes/Tank.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/GodotPythonBridge.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="ScriptTank" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="RepulsionArea" index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )

[node name="PythonScriptHolder" type="Node" parent="." index="2"]
script = ExtResource( 1 )

[connection signal="initialise_script" from="." to="PythonScriptHolder" method="_receive_initialise_script"]
[connection signal="tank_update" from="." to="PythonScriptHolder" method="_receive_update"]
[connection signal="accelerate_tank" from="PythonScriptHolder" to="." method="_on_script_accelerate"]
[connection signal="initialisation_complete" from="PythonScriptHolder" to="." method="_on_script_initialisation_complete"]
[connection signal="shoot_bullet" from="PythonScriptHolder" to="." method="_on_script_shoot"]
